# livecaption

./: .gitignore  CLAUDE.md  README.en.md  README.md  pyproject.toml
docs/superpowers/specs/: 2026-06-14-system-audio-window-design.md
livecaption/: __init__.py  asr.py  asr_qwen.py  audio.py  cli.py  cli_window.py  config.py  languages.py  models.py  render.py  runtime.py  swift_window.py  translate.py  window.py
native/CaptionWindow/: Package.swift
native/CaptionWindow/Sources/CaptionWindow/: AppDelegate.swift  AppEntry.swift  CaptionState.swift  ContentView.swift  EscapeCloseGate.swift  StdinReader.swift
native/CaptionWindow/Tests/CaptionWindowTests/: EscapeCloseGateTests.swift
scripts/: build_audiotee.sh  build_caption_window.sh  diag_system_audio.py  smoke_asr.py  smoke_diff.py  smoke_mel.py  smoke_qwen.py  smoke_qwen_diar.py  smoke_translate.py  smoke_window.py  spike_qwen3.py
tests/: test_cli_window_sigint_hint.py  test_subprocess_signal_isolation.py
