[project]
name = "livecaption"
version = "0.1.0"
description = "本地实时英文转录 + 中文翻译 CLI（macOS / Apple Silicon）"
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    # pin <0.5：asr.py 复用了 mlx_audio.stt.models.nemotron_asr.streaming 的内部实现，
    # 升级 minor 版本前先跑 scripts/smoke_asr.py 验证
    "mlx-audio>=0.4.4,<0.5",
    "mlx-lm>=0.31.1",
    "sounddevice>=0.5.1",
    "numpy>=1.26",
    "rich>=13.7",
    "typer>=0.12",
    "huggingface-hub>=0.30",
]

[project.optional-dependencies]
# Qwen3-ASR backend (the qwen3-* --asr-model aliases): strong Chinese, pure-MLX. Ground-up
# reimpl (moona3k); its layer naming differs from mlx-audio, so the mlx-community/Qwen3-ASR-*-8bit
# repos (mlx-audio's) do NOT load here -- use fp16 Qwen/Qwen3-ASR-* or its own converter.
# Install with `uv sync --extra qwen`.
# Pin <0.4: asr_qwen.py imports the package internals (`mlx_qwen3_asr.streaming` +
# undocumented state/result fields), so a minor bump may break it -- mirror the mlx-audio cap.
qwen = ["mlx-qwen3-asr>=0.3.5,<0.4"]

[project.scripts]
livecaption = "livecaption.cli:run"
livecaption-window = "livecaption.cli_window:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["livecaption"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
# 与代码中的 noqa 标注（SIM115/BLE001/ANN002 等）对应的规则集
select = ["E", "F", "W", "I", "B", "UP", "SIM", "BLE", "ANN0"]

[tool.ruff.lint.flake8-bugbear]
# typer 的参数声明惯用法就是在默认值位置调用 typer.Option
extend-immutable-calls = ["typer.Option"]
